updated to reflect .proto fixes
