# gen/rest_models/dtaservice_transform_document_response.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package rest_models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/swag"
+)
+
+// DtaserviceTransformDocumentResponse The response message containing the transformed message
+// swagger:model dtaserviceTransformDocumentResponse
+type DtaserviceTransformDocumentResponse struct {
+
+	// error
+	Error []string `json:"error"`
+
+	// trans document
+	// Format: byte
+	TransDocument strfmt.Base64 `json:"trans_document,omitempty"`
+
+	// trans output
+	TransOutput []string `json:"trans_output"`
+}
+
+// Validate validates this dtaservice transform document response
+func (m *DtaserviceTransformDocumentResponse) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *DtaserviceTransformDocumentResponse) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *DtaserviceTransformDocumentResponse) UnmarshalBinary(b []byte) error {
+	var res DtaserviceTransformDocumentResponse
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
